--- a/stundenplan_uebersicht.html
+++ b/stundenplan_uebersicht.html
@@ -49,7 +49,7 @@
                                     <h5 class="card-title">hinzufügen</h5>
                                 </div>
                             </div>
-                            <a href="stundenplan_hinzufuegen.html" class="stretched-link"></a>
+                            <a href="stunde_hinzufuegen.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
